added emogi and ui.bootstrap

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -259,6 +259,7 @@
     <script src="bower_components/ng-google-signin/dist/ng-google-signin.js"></script>
     <script src="bower_components/aws-sdk/dist/aws-sdk.js"></script>
     <script src="bower_components/angular-adaptive-speech/src/angular-adaptive-speech.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
