implemented firebase library, add and retrieve dummy data

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -290,6 +290,10 @@
         <script src="scripts/config/time-ago-config.js"></script>
         <script src="scripts/config/google-sign-in.js"></script>
 
+        <!-- Firebase -->
+        <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script>
+
         <!-- endbuild -->
 </body>
 </html>
