change title, update style

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -83,8 +83,8 @@
                                 </ul>
                             </li>
                             <li data-ng-if="loginCtrl.user == null">
-                                <a href="#!/" class="animated fadeIn">
-                                    Title Name
+                                <a href="#!/" class="btn btn-warning animated fadeIn input-sm title-btn-link">
+                                    Home
                                 </a>
                             </li>
                         </ul>
