added typing animation in start page

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -18,6 +18,9 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+      <!-- for typing -->
+    <!--<link rel="stylesheet" href="https://cdn.rawgit.com/codekraft-studio/angular-typed/master/style.css">-->
+    <link rel="stylesheet" href="https://cdn.rawgit.com/codekraft-studio/angular-typed/master/src/angular-typed.css">
     <!-- endbuild -->
   </head>
   <body data-ng-app="radUlFasaadApp">
@@ -289,6 +292,9 @@
         <script src="scripts/config/form-validation.js"></script>
         <script src="scripts/config/time-ago-config.js"></script>
         <script src="scripts/config/google-sign-in.js"></script>
+
+        <!-- Angular-typed -->
+        <script src="https://cdn.rawgit.com/codekraft-studio/angular-typed/master/dist/angular-typed.min.js"></script>
 
         <!-- Firebase -->
         <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
