commit some changes, style user input

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -297,8 +297,8 @@
         <script src="https://cdn.rawgit.com/codekraft-studio/angular-typed/master/dist/angular-typed.min.js"></script>
 
         <!-- Firebase -->
-        <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script>
+        <!--<script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>-->
+        <!--<script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script>-->
 
         <!-- endbuild -->
 </body>
