--- a/web/app/index.html
+++ b/web/app/index.html
@@ -295,9 +295,9 @@
         <!-- Angular-typed -->
         <script src="https://cdn.rawgit.com/codekraft-studio/angular-typed/master/dist/angular-typed.min.js"></script>
 
-        <!-- Firebase -->
-        <!--<script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>-->
-        <!--<script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script>-->
+        <!-- Speech-Recognition with KITT -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/SpeechKITT/1.0.0/speechkitt.min.js"></script>
 
         <!-- endbuild -->
 </body>
