--- a/web/app/index.html
+++ b/web/app/index.html
@@ -164,8 +164,20 @@
                                             <input bs-validation required class="form-control" type="text"
                                                    data-ng-model="loginCtrl.singIn.email" placeholder="Email" name="email">
                                             <input bs-validation required class="form-control" type="password"
-                                                   data-ng-model="loginCtrl.singIn.pass" placeholder="Password" name="password">
-
+                                                   data-ng-model="loginCtrl.singIn.password" placeholder="Password" name="password">
+                                            <div class="input-group">
+                                                <div class="checkbox margin-left-5">
+                                                    <label>
+                                                        <input type="checkbox" name="remember"
+                                                               data-ng-model="loginCtrl.singIn.remember"
+                                                               ng-true-value="true"
+                                                               ng-false-value="false">
+                                                        <span class="text-muted">
+                                                            Remember me.
+                                                        </span>
+                                                    </label>
+                                                </div>
+                                            </div>
                                             <button data-ng-disabled="isLoading" data-ng-class="{'grey-bg': isLoading}"
                                                     type="submit" class="btn hvr-shutter-out-horizontal btn-default btn-login">Login</button>
                                         </form>
@@ -262,6 +274,7 @@
     <script src="bower_components/ng-google-signin/dist/ng-google-signin.js"></script>
     <script src="bower_components/aws-sdk/dist/aws-sdk.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/ngstorage/ngStorage.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
