added external lib locally

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -307,11 +307,11 @@
         <script src="scripts/config/google-sign-in.js"></script>
 
         <!-- Angular-typed -->
-        <script src="https://cdn.rawgit.com/codekraft-studio/angular-typed/master/dist/angular-typed.min.js"></script>
+        <script src="scripts/lib/angular-typed.min.js"></script>
 
         <!-- Speech-Recognition with KITT -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/SpeechKITT/1.0.0/speechkitt.min.js"></script>
+        <script src="scripts/lib/annyang.min.js"></script>
+        <script src="scripts/lib/speechkitt.min.js"></script>
 
         <!-- endbuild -->
 </body>
