--- a/web/app/index.html
+++ b/web/app/index.html
@@ -8,8 +8,6 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/please-wait/build/please-wait.css" />
-    <link rel="stylesheet" href="bower_components/SpinKit/css/spinkit.css" />
     <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css" />
     <link rel="stylesheet" href="bower_components/angular-timeline/dist/angular-timeline.css" />
     <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
@@ -25,7 +23,18 @@
   </head>
   <body data-ng-app="radUlFasaadApp">
 
-    <!-- Audio element -->
+
+    <!-- application loader -->
+    <div class="app-loader" ng-if="startLoading">
+      <li class="three-bounce selected">
+          <div class="one"></div>
+          <div class="two"></div>
+          <div class="three"></div>
+      </li>
+    </div>
+
+
+    <!-- audio element -->
     <audio controls autoplay id="say_speak"></audio>
 
     <!--[if lte IE 8]>
@@ -178,8 +187,15 @@
                                                     </label>
                                                 </div>
                                             </div>
-                                            <button data-ng-disabled="isLoading" data-ng-class="{'grey-bg': isLoading}"
-                                                    type="submit" class="btn hvr-shutter-out-horizontal btn-default btn-login">Login</button>
+                                            <div data-ng-show="!isLoading">
+                                                <button data-ng-disabled="isLoading" type="submit"
+                                                        class="btn hvr-shutter-out-horizontal btn-default btn-login">Login</button>
+                                            </div>
+                                            <div data-ng-show="isLoading">
+                                                <button type="button" data-ng-disabled="true"
+                                                        class="btn btn-default btn-login grey-bg">Please wait
+                                                </button>
+                                            </div>
                                         </form>
                                     </div>
                                 </div>
@@ -209,8 +225,8 @@
                                                        type="submit" value="Create account" name="submit">
                                             </div>
                                             <div data-ng-show="isLoading">
-                                                <input data-ng-class="{'grey-bg': !isLoading}" type="button"
-                                                       class="btn btn-default btn-register" value="Please wait" data-ng-disabled="true">
+                                                <input type="button" value="Please wait" data-ng-disabled="true"
+                                                       class="btn btn-default btn-register grey-bg">
                                             </div>
                                         </form>
                                     </div>
@@ -248,15 +264,15 @@
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-    <script>
-       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
-       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
-       r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
-       }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    <!--<script>-->
+       <!--!function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){-->
+       <!--(A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),-->
+       <!--r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)-->
+       <!--}(window,document,'script','https://www.google-analytics.com/analytics.js','ga');-->
 
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
+       <!--ga('create', 'UA-XXXXX-X');-->
+       <!--ga('send', 'pageview');-->
+    <!--</script>-->
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
@@ -269,7 +285,6 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
-    <script src="bower_components/please-wait/build/please-wait.js"></script>
     <script src="bower_components/bootstrap-angular-validation/dist/bootstrap-angular-validation-all.min.js"></script>
     <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="bower_components/angular-timeline/dist/angular-timeline.js"></script>
@@ -298,7 +313,6 @@
 
         <!-- Factories -->
         <script src="scripts/factory/auth.js"></script>
-        <script src="scripts/factory/app-loader.js"></script>
         <script src="scripts/factory/nlp.js"></script>
         <script src="scripts/factory/user.js"></script>
 
