--- a/web/app/index.html
+++ b/web/app/index.html
@@ -169,7 +169,8 @@
                                     </div>
                                     <div class="error"></div>
                                     <div class="form loginBox">
-                                        <form name="loginForm" data-ng-submit="loginCtrl.loginAjax(loginForm)">
+                                        <form name="loginForm"
+                                              data-ng-submit="loginCtrl.loginAjax(loginForm);loginCtrl.doBlur($event, 'login')">
                                             <input id="login_focus" bs-validation required class="form-control" type="text"
                                                    data-ng-model="loginCtrl.singIn.email" placeholder="Email" name="email">
                                             <input bs-validation required class="form-control" type="password"
@@ -187,11 +188,11 @@
                                                     </label>
                                                 </div>
                                             </div>
-                                            <div data-ng-show="!isLoading">
-                                                <button data-ng-disabled="isLoading" type="submit"
-                                                        class="btn hvr-shutter-out-horizontal btn-default btn-login">Login</button>
+                                            <div data-ng-show="!startLoading">
+                                                <button class="btn hvr-shutter-out-horizontal btn-default btn-login"
+                                                        type="submit">Login</button>
                                             </div>
-                                            <div data-ng-show="isLoading">
+                                            <div data-ng-show="startLoading">
                                                 <button type="button" data-ng-disabled="true"
                                                         class="btn btn-default btn-login grey-bg">Please wait
                                                 </button>
@@ -203,12 +204,17 @@
                             <div class="box">
                                 <div class="content registerBox" style="display:none;">
                                     <div class="form">
-                                        <form name="registerForm" data-ng-submit="loginCtrl.registerUser(registerForm)">
-                                            <input id="signup_focus" bs-validation required class="form-control" data-ng-model="loginCtrl.register.fullName"
-                                                   type="text" placeholder="Your Name" name="fullName">
+                                        <form name="registerForm"
+                                              data-ng-submit="loginCtrl.registerUser(registerForm);loginCtrl.doBlur($event, 'signup')">
+                                            <input id="signup_focus" bs-validation required class="form-control"
+                                                   data-ng-model="loginCtrl.register.firstName"
+                                                   type="text" placeholder="First Name" name="fName">
+                                            <input bs-validation required class="form-control"
+                                                   data-ng-model="loginCtrl.register.lastName"
+                                                   type="text" placeholder="Last Name" name="lName">
                                             <input bs-validation required class="form-control" data-ng-model="loginCtrl.register.email"
                                                    type="text" placeholder="Email" name="email">
-                                            <input bs-validation required class="form-control" data-ng-model="loginCtrl.register.contact"
+                                            <input bs-validation required class="form-control" data-ng-model="loginCtrl.register.phoneNumber"
                                                    type="text" placeholder="Contact" name="contact">
                                             <input bs-validation required class="form-control" data-ng-model="loginCtrl.register.password"
                                                    type="password" placeholder="Password" name="password">
@@ -220,18 +226,20 @@
                                                 password not same
                                             </div>
 
-                                            <div data-ng-show="!isLoading">
+                                            <div data-ng-show="!startLoading">
                                                 <input class="btn btn-default hvr-back-pulse btn-register"
                                                        type="submit" value="Create account" name="submit">
                                             </div>
-                                            <div data-ng-show="isLoading">
-                                                <input type="button" value="Please wait" data-ng-disabled="true"
-                                                       class="btn btn-default btn-register grey-bg">
+                                            <div data-ng-show="startLoading">
+                                                <button type="button" data-ng-disabled="true"
+                                                        class="btn btn-default btn-register grey-bg">Please wait
+                                                </button>
                                             </div>
                                         </form>
                                     </div>
                                 </div>
                             </div>
+                            <input readonly type="text" class="took-focus">
                         </div>
                         <div class="modal-footer">
                             <div class="forgot login-footer">
