--- a/web/app/index.html
+++ b/web/app/index.html
@@ -34,9 +34,6 @@
     </div>
 
 
-    <!-- audio element -->
-    <audio controls autoplay id="say_speak"></audio>
-
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser.
           Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -61,44 +58,12 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="left-navbar-menu-collapse">
                         <ul class="nav navbar-nav">
-                            <li data-ng-if="loginCtrl.user != null" class="dropdown">
-                                <a title="{{loginCtrl.selectedVoice.LanguageName}}" href="javascript:"
-                                   class="dropdown-toggle animated fadeIn language-title" data-toggle="dropdown">
-                                    <i title="Language" class="fa fa-language" aria-hidden="true"></i>
-                                    <span ng-if="loginCtrl.selectedVoice.Name" class="animated fadeIn"
-                                          ng-bind="loginCtrl.selectedVoice.Name + ' (' + loginCtrl.selectedVoice.LanguageCode + ')'"></span>
-                                    <b class="caret"></b>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <div class="overflow text-center">
-                                        <li title="{{voice.LanguageName}}"
-                                            data-ng-click="loginCtrl.selectedVoice = voice"
-                                            data-ng-repeat="voice in loginCtrl.voices track by $index">
-                                            <a href="javascript:" class="hvr-grow">
-                                              <span data-ng-bind="voice.Name + ' (' + voice.LanguageCode + ')'"></span>
-                                              <span class="label label-danger" data-ng-bind="voice.Gender"
-                                                    ng-class="{
-                                                    'text-pink': voice.Gender == 'Female',
-                                                    'text-green': voice.Gender == 'Male',
-                                                    }">
-                                              </span>
-                                            </a>
-                                        </li>
-                                    </div>
-
-                                    <li class="divider"></li>
-                                    <li class="inactive-link">
-                                        <a href="javascript:" class="text-center">
-                                          <i class="fa fa-microphone" aria-hidden="true"></i> available voices
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li data-ng-if="loginCtrl.user == null">
-                                <a href="#!/" class="btn btn-warning animated fadeIn input-sm title-btn-link">
-                                    Home
-                                </a>
-                            </li>
+                          <li class="animated fadeIn">
+                            <a href="javascript:">
+                              <i title="Language" class="fa fa-language" aria-hidden="true"></i>
+                              <span ng-bind="loginCtrl.selectedVoice.LanguageCode"></span>
+                            </a>
+                          </li>
                         </ul>
 
                         <ul data-ng-if="loginCtrl.user == null" class="nav navbar-nav navbar-right">
